--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "adorn-api",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "TypeScript API framework using Standard TC39 Decorators",
   "main": "index.js",
+  "bin": {
+    "adorn-api": "./dist/cli/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "gen:spec": "ts-node --esm src/cli/generate-swagger.ts",
@@ -17,6 +20,7 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "commander": "^14.0.2",
     "express": "^4.21.1",
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.1",
