--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "outDir": "./dist",
     "rootDir": ".",
+    "noEmit": false,
     // "experimentalDecorators": false, <--- ENSURE THIS IS FALSE OR OMITTED
     "emitDecoratorMetadata": false // Standard decorators don't use this
   },
@@ -14,7 +15,7 @@
     "tests/**/*"
   ],
   "ts-node": {
-    "preferTsExts": true,
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
