--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "adorn-api",
-  "version": "1.1.0",
-  "description": "TypeScript API framework using Standard TC39 Decorators",
-  "main": "index.js",
+  "version": "1.0.1",
+  "description": "TypeScript API framework with modern decorators",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
     "adorn-api": "./dist/cli/index.js"
   },
