--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "compilerOptions": {
+    "compilerOptions": {
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
@@ -7,6 +7,8 @@
     "outDir": "./dist",
     "rootDir": ".",
     "noEmit": false,
+    "declaration": true,
+    "declarationMap": true,
     // "experimentalDecorators": false, <--- ENSURE THIS IS FALSE OR OMITTED
     "emitDecoratorMetadata": false // Standard decorators don't use this
   },
