--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "src/**/*",
     "tests/**/*"
   ],
+  "exclude": [
+    "dist/**/*",
+    "node_modules/**/*"
+  ],
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
