--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "adorn-api": "./dist/cli/index.js"
+    "adorn-api": "./dist/src/cli/index.js"
   },
   "scripts": {
     "build": "tsc",
