--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
@@ -18,7 +18,9 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "test": "jest",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src"
   },
@@ -33,19 +35,21 @@
   "author": "Celsowm",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@eslint/config-array": "^0.23.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/object-schema": "^3.0.0",
     "@types/express": "^4.17.0",
-    "@types/jest": "^29.0.0",
-    "jest": "^29.0.0",
+    "@types/node": "^20.19.27",
+    "eslint": "^9.0.0",
+    "prettier": "^3.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
-    "prettier": "^3.0.0",
-    "eslint": "^8.0.0"
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "express": "^4.18.0",
-    "zod": "^3.22.0",
     "swagger-ui-express": "^5.0.0",
-    "ts-morph": "^21.0.0"
+    "ts-morph": "^21.0.0",
+    "zod": "^3.22.0"
   }
 }
