--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:run": "vitest run",
     "test:ui": "vitest --ui",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write src"
+    "format": "prettier --write src",
+    "check": "npx tsc --noEmit"
   },
   "keywords": [
     "api",
