--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "build": "tsc -p tsconfig.json",
     "test": "pnpm build && vitest run",
     "openapi": "pnpm build && node dist/src/cli/openapi.js ./dist/tests/e2e/controllers/users.controller.js --out ./openapi.json",
-    "manifest": "pnpm build && node dist/src/cli/manifest.js ./dist/tests/e2e/controllers/users.controller.js"
+    "manifest": "pnpm build && node dist/src/cli/manifest.js ./dist/tests/e2e/controllers/users.controller.js",
+    "check": "pnpm run check:types && pnpm run check:lint && pnpm run check:security && pnpm run check:deps && pnpm run check:format && pnpm run check:build && pnpm run check:test",
+    "check:types": "tsc --noEmit --strict --noUnusedLocals --noUnusedParameters --noImplicitReturns --noFallthroughCasesInSwitch --exactOptionalPropertyTypes",
+    "check:lint": "eslint src/**/*.ts tests/**/*.ts --max-warnings 0",
+    "check:security": "eslint src/**/*.ts tests/**/*.ts --max-warnings 0 --rule 'security/recommended: error'",
+    "check:deps": "pnpm audit --audit-level high",
+    "check:format": "prettier --check src/**/*.ts tests/**/*.ts",
+    "format": "prettier --write src/**/*.ts tests/**/*.ts",
+    "check:build": "pnpm run clean && pnpm run build",
+    "check:test": "pnpm run test"
   },
   "dependencies": {
     "express": "^5.2.1",
@@ -21,6 +30,13 @@
     "@types/express": "^5.0.6",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-security": "^3.0.1",
+    "prettier": "^3.7.4",
     "rimraf": "^6.0.0",
     "supertest": "^7.1.4",
     "typescript": "^5.2.2",
