--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
+    "better-sqlite3": "^12.5.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-security": "^3.0.1",
     "metal-orm": "^1.0.59",
     "prettier": "^3.7.4",
-    "better-sqlite3": "^12.5.0",
     "supertest": "^7.1.4",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
