feat(core): add 204 status for void controller returns
Allow controllers to return undefined (void) to automatically send a 204 No Content response, improving API semantics for empty responses. Added vitest script to package.json for testing setup.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "vitest": "vitest",
     "test": "npm run build && npm run vitest run",
     "openapi": "npm run build && node dist/src/cli/openapi.js./dist/tests/e2e/controllers/users.controller.js --out./openapi.json",
     "manifest": "npm run build && node dist/src/cli/manifest.js./dist/tests/e2e/controllers/users.controller.js",
