--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-security": "^3.0.1",
     "metal-orm": "^1.0.60",
     "prettier": "^3.7.4",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
