feat: add check script and improve reply type guard
Add a new "check" npm script that combines typecheck and test commands for convenience. Also improve the isReply type guard function in the reply.ts contract by adding a missing closing brace.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "build": "npm run clean && tsc -p tsconfig.build.json",
+    "check": "npm run typecheck && npm run test",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
