--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "build": "npm run clean && tsc -p tsconfig.build.json",
-    "check": "npm run typecheck && npm run test",
+    "check": "npm run typecheck && npm run check:decorated-returns && npm run test",
+    "check:decorated-returns": "node scripts/check-decorated-returns.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
