--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "type": "module",
   "sideEffects": false,
-  "files": ["dist"],
-
+  "files": [
+    "dist"
+  ],
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -24,16 +24,13 @@
       "default": "./dist/metal-orm.js"
     }
   },
-
   "engines": {
     "node": ">=18"
   },
-
   "dependencies": {
     "express": "^5.2.1",
-    "metal-orm": "1.0.63"
+    "metal-orm": "^1.0.64"
   },
-
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
@@ -43,7 +40,6 @@
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   },
-
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "build": "npm run clean && tsc -p tsconfig.build.json",
