--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
     "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
     "typescript": "^5.9.3",
@@ -43,7 +46,8 @@
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "build": "npm run clean && tsc -p tsconfig.build.json",
-    "check": "npm run typecheck && npm run check:decorated-returns && npm run test",
+    "check": "npm run lint && npm run typecheck && npm run check:decorated-returns && npm run test",
+    "lint": "eslint . --ext .ts",
     "check:decorated-returns": "node scripts/check-decorated-returns.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
