fix: improve type safety and linting scope
- Update lint script to only check src and test directories
- Add eslint-disable comment for no-undef in check-decorated-returns.js
- Improve type safety in router.ts by:
  - Changing return type from 'any' to 'unknown' in ControllerFactory
  - Adding explicit RouteHandler and ControllerInstance types
  - Strengthening type annotations throughout the file
- Similar type safety improvements in other files (truncated in diff)
- These changes improve code reliability and maintainability

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "check": "npm run lint && npm run typecheck && npm run check:decorated-returns && npm run test",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint src test --ext .ts",
     "check:decorated-returns": "node scripts/check-decorated-returns.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
