--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
     "metal-orm": "^1.0.64"
   },
   "peerDependencies": {
-    "typescript": "^5.9.0",
-    "ts-patch": "^3.0.0"
+    "ts-patch": "^3.0.0",
+    "typescript": "^5.9.0"
   },
   "peerDependenciesMeta": {
-    "ts-patch": { "optional": true }
+    "ts-patch": {
+      "optional": true
+    }
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^12.3.0",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
@@ -52,6 +55,8 @@
     "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
     "ts-patch": "^3.0.0",
+    "ts-transformer-keys": "^0.4.4",
+    "tslib": "^2.8.1",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   },
