--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "types": ["node", "vitest/globals"],
     "noEmit": true,
     "plugins": [
-      { "transform": "./dist/compiler/transform/index.js", "isEsm": true }
+      { "transform": "./dist/compiler/transform/index.js", "isEsm": true },
+      { "transform": "ts-transformer-keys/transformer" }
     ]
   },
   "include": ["src/**/*.ts", "test/**/*.ts"]
