--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
   "scripts": {
     "clean": "rimraf dist",
     "typecheck": "tsc -p tsconfig.json",
+    "lint": "eslint src --ext .ts",
+    "check": "npm run typecheck && npm run test",
     "build:js": "tsup src/index.ts src/express.ts src/cli.ts --format esm,cjs --out-dir dist --sourcemap",
     "build:types": "tsc -p tsconfig.build.json",
     "build": "npm run clean && npm run build:js && npm run build:types",
     "test": "vitest run",
+    "test:staleness": "vitest run test/cache/staleness.test.ts",
     "dev": "tsx src/cli.ts dev"
   },
   "dependencies": {
