feat: implement request validation using ajv
Integrate ajv and ajv-formats to validate incoming request data against defined JSON schemas. This ensures that request bodies, query parameters, and path parameters adhere to expected structures and types. Validation errors are collected and returned, and query parameters are type-coerced prior to validation.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
       "import": "./dist/cli.js",
       "require": "./dist/cli.cjs"
     },
+    "./schema": {
+      "types": "./dist/schema/index.d.ts",
+      "import": "./dist/schema/index.js",
+      "require": "./dist/schema/index.cjs"
+    },
     "./package.json": "./package.json"
   },
   "bin": {
@@ -37,7 +42,7 @@
     "typecheck": "tsc -p tsconfig.json",
     "lint": "eslint src --ext .ts",
     "check": "npm run typecheck && npm run test",
-    "build:js": "tsup src/index.ts src/express.ts src/cli.ts --format esm,cjs --out-dir dist --sourcemap",
+    "build:js": "tsup src/index.ts src/express.ts src/cli.ts src/schema/index.ts --format esm,cjs --out-dir dist --sourcemap",
     "build:types": "tsc -p tsconfig.build.json",
     "build": "npm run clean && npm run build:js && npm run build:types",
     "test": "vitest run",
@@ -45,6 +50,8 @@
     "dev": "tsx src/cli.ts dev"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "typescript": "^5.9.0"
   },
   "peerDependencies": {
