--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.0",
+    "eslint": "^9.39.2",
     "express": "^5.2.1",
     "rimraf": "^6.0.0",
     "supertest": "^7.1.4",
