--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "metal-orm": "^1.0.66",
     "typescript": "^5.9.0"
   },
   "peerDependencies": {
