--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
       "import": "./dist/schema/index.js",
       "require": "./dist/schema/index.cjs"
     },
+    "./metal": {
+      "types": "./dist/metal/index.d.ts",
+      "import": "./dist/metal/index.js",
+      "require": "./dist/metal/index.cjs"
+    },
     "./package.json": "./package.json"
   },
   "bin": {
@@ -42,7 +47,7 @@
     "typecheck": "tsc -p tsconfig.json",
     "lint": "eslint src --ext .ts",
     "check": "npm run typecheck && npm run test",
-    "build:js": "tsup src/index.ts src/express.ts src/cli.ts src/schema/index.ts --format esm,cjs --out-dir dist --sourcemap",
+    "build:js": "tsup src/index.ts src/express.ts src/cli.ts src/schema/index.ts src/metal/index.ts --format esm,cjs --out-dir dist --sourcemap",
     "build:types": "tsc -p tsconfig.build.json",
     "build": "npm run clean && npm run build:js && npm run build:types",
     "test": "vitest run",
