chore: add scripts and gitignore config for examples
Updated .gitignore to exclude build artifacts and node_modules
from the examples directory. Added npm scripts (example,
example:basic, examples:install) to facilitate running and
managing dependencies for example projects.

--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "build": "npm run clean && npm run build:js && npm run build:types",
     "test": "vitest run",
     "test:staleness": "vitest run test/cache/staleness.test.ts",
-    "dev": "tsx src/cli.ts dev"
+    "dev": "tsx src/cli.ts dev",
+    "example": "tsx scripts/run-example.ts",
+    "example:basic": "npm run example -- basic",
+    "examples:install": "cd examples/basic && npm install"
   },
   "dependencies": {
     "ajv": "^8.17.1",
