--- a/examples/three-controllers/package.json
+++ b/examples/three-controllers/package.json
@@ -8,12 +8,10 @@
   },
   "dependencies": {
     "adorn-api": "file:../..",
-    "express": "^4.18.2",
-    "swagger-ui-express": "^5.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
-    "@types/swagger-ui-express": "^4.1.6",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   }
