--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "metal-orm": "^1.0.66",
-    "typescript": "^5.9.0"
+    "typescript": "^5.9.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "peerDependencies": {
     "express": "^4.18.0 || ^5.0.0"
@@ -75,6 +76,7 @@
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.6",
     "eslint": "^9.39.2",
     "express": "^5.2.1",
     "rimraf": "^6.0.0",
