feat: add task-manager example and update package scripts
Added a new task-manager example to demonstrate API functionality and updated package.json scripts to include the new example runner command. This provides users with an additional practical example for reference and testing purposes.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dev": "tsx src/cli.ts dev",
     "example": "tsx scripts/run-example.ts",
     "example:basic": "npm run example -- basic",
+    "example:task-manager": "npm run example -- task-manager",
     "examples:install": "cd examples/basic && npm install"
   },
   "dependencies": {
