test: ensure build runs before executing tests
- Update package.json scripts for test and test:staleness to trigger a build before running vitest, ensuring tests run against the latest compiled code.
- Clean up unused imports and constants in src/adapter/express/bootstrap.ts.
- Update test fixture cache with refreshed build timestamps.

--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "build:js": "tsup src/index.ts src/express.ts src/cli.ts src/schema/index.ts src/metal/index.ts --format esm,cjs --out-dir dist --sourcemap --no-splitting && tsup scripts/adorn-example.ts --format esm,cjs --out-dir dist/scripts --sourcemap --no-splitting",
     "build:types": "tsc -p tsconfig.build.json",
     "build": "npm run clean && npm run build:js && npm run build:types",
-    "test": "vitest run",
-    "test:staleness": "vitest run test/cache/staleness.test.ts",
+    "test": "npm run build && vitest run",
+    "test:staleness": "npm run build && vitest run test/cache/staleness.test.ts",
     "dev": "tsx src/cli.ts dev",
     "example": "tsx scripts/run-example.ts",
     "example:list": "tsx scripts/adorn-example.ts --list",
