--- a/examples/blog-platform-metal-orm/package.json
+++ b/examples/blog-platform-metal-orm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-platform",
+  "name": "blog-platform-metal-orm",
   "version": "1.0.0",
   "description": "Blog platform example using metal-orm decorators with adorn-api",
   "type": "module",
@@ -12,7 +12,8 @@
     "adorn-api": "file:../..",
     "metal-orm": "^1.0.66",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
