--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "typecheck": "tsc -p tsconfig.json",
     "lint": "eslint src --ext .ts",
     "check": "npm run typecheck && npm run test",
-    "build:js": "tsup src/index.ts src/express.ts src/cli.ts src/schema/index.ts src/metal/index.ts --format esm,cjs --out-dir dist --sourcemap --no-splitting && tsup scripts/adorn-example.ts --format esm,cjs --out-dir dist/scripts --sourcemap --no-splitting",
+    "build:js": "tsup src/index.ts src/express.ts src/cli.ts src/schema/index.ts src/metal/index.ts --format esm,cjs --out-dir dist --sourcemap --no-splitting && tsup scripts/adorn-example.ts --format cjs --out-dir dist/scripts --sourcemap --no-splitting",
     "build:types": "tsc -p tsconfig.build.json",
     "build": "npm run clean && npm run build:js && npm run build:types",
     "test": "npm run build && vitest run",
