--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
-    "metal-orm": "^1.0.66",
-    "typescript": "^5.9.0",
-    "swagger-ui-express": "^5.0.0"
+    "metal-orm": "^1.0.67",
+    "swagger-ui-express": "^5.0.0",
+    "typescript": "^5.9.0"
   },
   "peerDependencies": {
     "express": "^4.18.0 || ^5.0.0"
