--- a/examples/blog-platform-metal-orm/package.json
+++ b/examples/blog-platform-metal-orm/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "adorn-api": "file:../..",
-    "metal-orm": "^1.0.66",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.7",
-    "sqlite": "^5.1.1"
+    "metal-orm": "^1.0.71",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
