refactor: improve type inference for SearchWhere options and fix example paths
This commit refactors the SearchWhere types to provide better depth resolution and path validation by introducing BaseSearchWhereOptions and a conditional SearchWhere type. It also fixes incorrect path mappings in the blog-platform-metal-orm example's tsconfig.json.

- Refactor SearchWhere and SearchWhereOptions to support dynamic depth resolution
- Update example tsconfig.json to correctly resolve the project root and adorn-api paths
- Add a new flat filter test case to the compiler fixtures
- Update existing tests to reflect changes in the post controller fixture

--- a/examples/blog-platform-metal-orm/tsconfig.json
+++ b/examples/blog-platform-metal-orm/tsconfig.json
@@ -2,11 +2,11 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "../..",
     "baseUrl": ".",
     "paths": {
-      "adorn-api/*": ["../src/*"],
-      "adorn-api": ["../src/index.ts"]
+      "adorn-api/*": ["../../src/*"],
+      "adorn-api": ["../../src/index.ts"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
