--- a/package.json
+++ b/package.json
@@ -77,10 +77,13 @@
     }
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "eslint": "^9.39.2",
     "express": "^5.2.1",
     "rimraf": "^6.0.0",
