--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "cors": "^2.8.5",
     "metal-orm": "^1.0.78",
     "swagger-ui-express": "^5.0.0",
     "typescript": "^5.9.0"
@@ -78,6 +79,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.0",
