--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "npm run build && concurrently -k \"tsc -p tsconfig.json -w\" \"node --watch dist/example/server.js\"",
-    "start": "node dist/example/server.js",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "dev": "npm run build && concurrently -k \"tsc -p tsconfig.json -w\" \"node --watch dist/examples/simple-metal-orm/server.js\"",
+    "start": "node dist/examples/simple-metal-orm/server.js",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "example:ping": "npm run build && node dist/examples/ping/server.js",
+    "example:simple-mocked-controller": "npm run build && node dist/examples/simple-mocked-controller/server.js",
+    "example:simple-metal-orm": "npm run build && node dist/examples/simple-metal-orm/server.js",
+    "example:relations-metal-orm": "npm run build && node dist/examples/relations-metal-orm/server.js"
   },
   "type": "module",
   "dependencies": {
