--- a/package.json
+++ b/package.json
@@ -1,5 +1,61 @@
 {
-    "dependencies": {
-        "metal-orm": "^1.0.90"
+  "name": "adorn-api",
+  "version": "0.1.0",
+  "description": "Modern TypeScript API framework using Stage 3 decorators with Express support and Metal-ORM integration",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "test": "vitest",
+    "test:unit": "vitest --run tests/unit",
+    "test:integration": "vitest --run tests/integration",
+    "test:e2e": "vitest --run tests/e2e",
+    "test:coverage": "vitest --coverage",
+    "lint": "eslint src --ext .ts",
+    "format": "prettier --write src tests",
+    "example:basic": "cd examples/basic && npm run dev",
+    "example:metal": "cd examples/metal-orm && npm run dev"
+  },
+  "keywords": [
+    "typescript",
+    "decorators",
+    "express",
+    "openapi",
+    "swagger",
+    "rest-api",
+    "metal-orm",
+    "stage-3-decorators"
+  ],
+  "author": "",
+  "license": "MIT",
+  "peerDependencies": {
+    "express": "^4.18.0 || ^5.0.0",
+    "typescript": "^5.0.0"
+  },
+  "peerDependenciesMeta": {
+    "metal-orm": {
+      "optional": true
     }
+  },
+  "dependencies": {
+    "openapi-types": "^12.1.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.0",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "@vitest/coverage-v8": "^1.2.1",
+    "eslint": "^8.56.0",
+    "express": "^4.18.2",
+    "metal-orm": "^1.0.90",
+    "prettier": "^3.2.4",
+    "supertest": "^6.3.4",
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.1",
+    "zod": "^3.22.4"
+  }
 }
