--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "^4.18.2",
     "metal-orm": "^1.0.90",
     "prettier": "^3.2.4",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "typescript": "^5.3.3",
     "vitest": "^1.2.1",
