feat(decorators): add list, create, and update decorators for collection handling
- Add new `List`, `Create`, and `Update` decorators for handling collections
- Integrate list route attachment in controller decorator
- Export new decorators and schema modifier in main index files
- Update OpenAPI generator to support entity-based responses
- Add schema modifier for Metal ORM integration
- Include new test file for list decorator integration
- Update package.json with new example installation script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src tests",
     "example:basic": "cd examples/basic && npm run dev",
-    "example:metal": "cd examples/metal-orm && npm run dev"
+    "example:metal": "cd examples/metal-orm && npm run dev",
+    "example:metal:install": "cd examples/metal-orm && npm install"
   },
   "keywords": [
     "typescript",
