--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     }
   },
   "dependencies": {
-    "openapi-types": "^12.1.3"
+    "openapi-types": "^12.1.3",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitest/coverage-v8": "^1.2.1",
