feat(openapi): enhance OpenAPI generation with improved schema handling and response definitions
- Add comprehensive OpenAPI schema generation with SchemaRegistry
- Implement automatic operation IDs, summaries, and descriptions
- Add support for entity-based schema generation after bootstrap
- Enhance response handling with proper status codes and error schemas
- Add request body generation from Zod schemas
- Improve parameter handling with Zod schema conversion
- Add automatic tag generation from controller paths
- Fix coerce positive number issue in parameter schemas
- Add validation and error response schemas
- Export zodToOpenApi utility function

BREAKING CHANGE: Response decorator now uses pending pattern similar to other decorators

--- a/examples/metal-orm/package.json
+++ b/examples/metal-orm/package.json
@@ -10,6 +10,7 @@
     "adorn-api": "file:../..",
     "express": "^4.18.2",
     "metal-orm": "^1.0.91",
+    "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
