--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "tsx examples/basic/index.ts",
     "test": "vitest run",
     "test:watch": "vitest",
-    "example": "node scripts/run-example.js"
+    "example": "node scripts/run-example.js",
+    "check": "tsc -p tsconfig.json --noEmit && npm test"
   },
   "dependencies": {
     "express": "^4.19.2"
