--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "check": "tsc -p tsconfig.json --noEmit && npm test"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "metal-orm": "^1.0.91"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^2.0.16",
+    "sqlite3": "^5.1.7",
+    "supertest": "^6.3.4",
     "tsx": "^4.7.0",
     "typescript": "^5.4.5",
-    "vitest": "^2.0.5",
-    "sqlite3": "^5.1.7",
-    "supertest": "^6.3.4"
+    "vitest": "^2.0.5"
   }
 }
