--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "example": "node scripts/run-example.js",
-    "check": "tsc -p tsconfig.json --noEmit && npm test"
+    "check": "tsc -p tsconfig.json --noEmit && npm test",
+    "lint": "eslint . --ext .ts,.tsx,.js"
   },
   "dependencies": {
     "express": "^4.19.2",
@@ -20,6 +21,9 @@
     "@types/express": "^4.17.21",
     "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
+    "eslint": "^8.57.1",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "tsx": "^4.7.0",
