refactor: move e2e tests to tests directory and add strict validation for entity metadata
- Move e2e tests from src/e2e to tests directory
- Add strict option to createMetalCrudDtos for error instead of warning on invalid metadata
- Add validateEntityMetadata and hasValidEntityMetadata helpers
- Validate OpenAPI schemas for empty properties and throw error with diagnostic info
- Update tsconfig.eslint.json and vitest.config.ts to include tests directory

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "allowJs": true
   },
-  "include": ["src", "examples", "scripts", "vitest.config.ts"]
+  "include": ["src", "tests", "examples", "scripts", "vitest.config.ts"]
 }
