--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "metal-orm": "^1.0.94"
   },
   "devDependencies": {
+    "@electric-sql/pglite": "^0.3.15",
     "@types/express": "^4.17.21",
     "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^2.0.16",
