--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.57.1",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
+    "tedious": "^16.7.1",
     "tsx": "^4.7.0",
     "typescript": "^5.4.5",
     "vitest": "^2.0.5"
