--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
+    "@vitest/mocker": "^4.0.18",
     "eslint": "^8.57.1",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "tedious": "^19.0.0",
     "tsx": "^4.7.0",
     "typescript": "^5.4.5",
-    "vitest": "^2.0.5"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   }
 }
